--- a/03 Scripts/Marta Majer CF The Final Project.ipynb
+++ b/03 Scripts/Marta Majer CF The Final Project.ipynb
@@ -1864,7 +1864,7 @@
    "id": "9104ce32-f60e-4f69-8374-e1d5226cf384",
    "metadata": {},
    "source": [
-    "### ❓ exporting merged dataset "
+    "### exporting merged dataset "
    ]
   },
   {
@@ -1883,7 +1883,7 @@
    "id": "11df5c11-262e-4d52-8b61-3df64e947290",
    "metadata": {},
    "source": [
-    "### answering previously set questions:\n",
+    "### ❓ answering previously set questions:\n",
     "\n",
     "Many of my initial questions are tied to specific time frames or countries, so I am not yet able to provide definitive answers. However, one interesting finding has been the exploration of relationships between different disorders, such as the link between eating disorders and bipolar disorder. More broadly, it’s been insightful to observe how eating disorders often co-exist with other mental health conditions."
    ]
